objects/Show_Account_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Roles by Show</relationshipLabel>
        <relationshipName>Show_Account_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContactRoles__c</fullName>
        <label>Contact Roles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A2Z Invoice Contact</fullName>
                </value>
                <value>
                    <fullName>Advertising contact</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Contract Contact</fullName>
                    <default>true</default>
                    <label>Contract Contact</label>
                </value>
                <value>
                    <fullName>Contract Contact (Secondary)</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Decorator</fullName>
                </value>
                <value>
                    <fullName>Directory contact</fullName>
                </value>
                <value>
                    <fullName>Distributor Representative</fullName>
                </value>
                <value>
                    <fullName>Exhibitor kit recipient</fullName>
                </value>
                <value>
                    <fullName>Marketing Contact</fullName>
                </value>
                <value>
                    <fullName>Only contact</fullName>
                </value>
                <value>
                    <fullName>Onsite contact</fullName>
                </value>
                <value>
                    <fullName>Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Sponsorship contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Roles by Show</relationshipLabel>
        <relationshipName>Show_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Show_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Show_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Brand__c</fullName>
        <formula>Show__r.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipName>Show_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Role by Show</label>
    <nameField>
        <displayFormat>S{0000}</displayFormat>
        <label>Show Account Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles by Show</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>